# Multisig-DAO

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  DEPLOY.md  DEPLOYMENT_GUIDE.md  GETTING_STARTED.md  INITIALIZE.bat  LICENSE  QUICKSTART.md  QUICK_START.md  README.md  REAL_WORLD_FLOW.md  START_APP.bat  SYSTEM_STATUS.md  TESTING_GUIDE.md  VAULT_LOGIC.md  deploy.sh  deployed-config.json  package-lock.json  package.json  setup-solana.sh  start.bat  test-web-flow.ts  tsconfig.json
docs/: APPROVAL_CODE_REFERENCE.md  APPROVAL_FLOW_DIAGRAMS.md  APPROVAL_LOGIC_SUMMARY.md  APPROVAL_REJECTION_LOGIC_PLAN.md  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  SECURITY.md  TEST_RESULTS.md  THREAT_MODEL.md
mobile/: .gitignore  App.tsx  app.json  babel.config.js  package-lock.json  package.json  tsconfig.json
programs/multisig_dao/: Cargo.toml
programs/multisig_dao/src/: errors.rs  events.rs  lib.rs  state.rs
programs/multisig_dao/src/instructions/: approve_proposal.rs  close_multisig.rs  create_proposal.rs  deposit_vault.rs  execute_proposal.rs  initialize.rs  mod.rs  reject_proposal.rs  transfer_sol.rs  update_multisig_config.rs
scripts/: analyze-multisig-data.js  calc-discriminator.js  check-account.sh  check-new-wallet-status.js  close-malformed.js  create-dao-wallet.js  dao-authority.json  deploy-and-initialize.ts  final-validation.ts  fix-multisig.js  init-anchor.js  init-multisig.js  init-new-direct.js  init-new-wallet.js  init-simple.js  init-simple.ts  initialize-multisig.ts  initialize.ts  prod-test.ts  (+6 more)
(+33 files in other folders)
