[package]
name = "multisig_dao"
version = "0.1.0"
description = "Production-grade Solana DAO Treasury with Multisig"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multisig_dao"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
